# sti2

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.en.md  README.md  build.sh  build_dynamic_trt.sh  build_ft_trt.sh  build_plugins.sh  build_static_trt.sh  dockerfile  main.cpp  modify_ERNIE.py  modify_onnx.py  onnx2trt.py  quantize.py  quantize.sh  requirements.txt  run.sh  test.sh
.gitee/: PULL_REQUEST_TEMPLATE.zh-CN.md
data/: perf.res.txt
include/: cookbookHelper.hpp
include/plugins/: AddReluPlugin.h  AddResidualLayerNormPlugin.h  EmbLayerNormPlugin.h  LayerNormPlugin.h  MaskedSoftmaxPlugin.h  PostEmbeddingPlugin.h  PreEmbeddingPlugin.h  common.cuh
model/: modify_ERNIE.py
onnx2trt/: onnx2trt.py
onnx_opt/: fuser.py
plugins/: CMakeLists.txt
plugins/AddReluPlugin/: AddReluPlugin.cu  CMakeLists.txt
plugins/LayerNormPlugin/: CMakeLists.txt
plugins/MaskedSoftmaxPlugin/: CMakeLists.txt  Makefile  MaskedSoftmaxPlugin.cu  testMaskedSoftmaxPluginOnnx.py
src/: CMakeLists.txt  Makefile  Makefile.inc  app.d  cookbookHelper.hpp  dynamic_onnx2trt.cpp  ernie_infer_demo.cpp  ft_onnx2trt.cpp  ft_trt_infer.cpp  main.cpp  main.py  main_ft.cpp  ms_ft.cpp  multi_profile.cpp  multi_profile_infer.cpp  multiprofile.cpp  multistream.cpp  onnx2trt.cpp  onnx2trt_ft.cpp  onnx2trt_multiprofile.cpp  pinned_graph.cpp  static_onnx2trt.cpp  static_trt_infer.cpp
src/AddLayerNormPlugin/: AddLayerNormPlugin.cu  AddLayerNormPlugin.h  Makefile  README.md  temp.nsys-rep  temp.sqlite  testAddLayerNormPlugin.py
src/LayerNormPlugin/: LayerNormPlugin.cu  LayerNormPlugin.h  Makefile  testLayerNormPlugin.py  testLayerNormPluginOnnx.py
src/ft_ernie/: .clang-format  CMakeLists.txt  compile.sh  ernie_guide.md
src/ft_ernie/examples/cpp/ernie/: CMakeLists.txt  ErnieEngine.cpp  ErnieEngine.h  ErnieGemm.cc  ErnieGemm.h  ernie_infer.cc  ernie_infer_graph.cc  ft_infer.cc  pinned_allocator.h
src/ft_ernie/src/fastertransformer/: CMakeLists.txt
src/ft_ernie/src/fastertransformer/kernels/: CMakeLists.txt  activation_int8_kernels.cu  activation_int8_kernels.h  ernie_kernels.cu  ernie_kernels.h
src/ft_ernie/src/fastertransformer/layers/: CMakeLists.txt  ErnieFFNLayer.cc  ErnieFFNLayer.h  FfnLayer.cc  FfnLayer.h  FfnLayerINT8.cc
src/ft_ernie/src/fastertransformer/layers/attention_layers/: CMakeLists.txt  FusedAttentionLayer.cu  FusedAttentionLayer.h
src/ft_ernie/src/fastertransformer/layers/attention_layers_int8/: CMakeLists.txt  FusedAttentionLayerINT8.cu
src/ft_ernie/src/fastertransformer/models/: CMakeLists.txt
src/ft_ernie/src/fastertransformer/models/ernie/: CMakeLists.txt  CudaGraph.h  Ernie.cc  Ernie.h  ErnieEncoder.cc  ErnieEncoder.h  ErnieEncoderLayerWeight.cc  ErnieEncoderLayerWeight.h  ErnieEncoderWeight.cc  ErnieEncoderWeight.h  ErnieLayerWeight.cc  ErnieLayerWeight.h  ErnieWeight.cc  ErnieWeight.h  FTCudaGraph.h  ernie_gemm.cc
src/ft_ernie/src/fastertransformer/models/ernie_int8/: CMakeLists.txt  ErnieINT8.cc  ErnieINT8.h  ErnieINT8Encoder.cc  ErnieINT8Encoder.h  ErnieINT8EncoderLayerWeight.cc  ErnieINT8EncoderLayerWeight.h  ErnieINT8EncoderWeight.cc  ErnieINT8EncoderWeight.h  ErnieINT8LayerWeight.cc  ErnieINT8LayerWeight.h  ErnieINT8Weight.cc  ErnieINT8Weight.h  ErnieLayerINT8.cc  ErnieLayerINT8.h  ErnieLayerINT8Weight.cc  ErnieLayerINT8Weight.h
src/ft_ernie/src/fastertransformer/tensorrt_plugin/: CMakeLists.txt
src/ft_ernie/src/fastertransformer/tensorrt_plugin/ernie/: CMakeLists.txt  ErnieBinPath.h.in  ErnieINT8Plugin.cu  ErnieINT8Plugin.h  ErniePlugin.cu  ErniePlugin.h  ErniePluginGemm.cc  ErniePluginGemm.h
src/ft_ernie/src/fastertransformer/utils/: CMakeLists.txt  cublasMMWrapper.cc  cuda_utils.h  debug.cpp  debug.h  debug_utils.cc  debug_utils.h
src/ft_ernie/src/fastertransformer/utils/gemm_test/: CMakeLists.txt  encoder_gemm_func.cc  encoder_gemm_func.h  ernie_gemm_func.cc  ernie_gemm_func.h
src/plugins/: AddReluPlugin.cu  AddResidualLayerNormPlugin.cu  CMakeLists.txt  EmbLayerNormPlugin.cu  LayerNormPlugin.cu  MaskedSoftmaxPlugin.cu  PostEmbeddingPlugin.cu  PreEmbeddingPlugin.cu
src/plugins/AddReluPlugin/: AddReluPlugin.cu  CMakeLists.txt
src/plugins/LayerNormPlugin/: CMakeLists.txt  LayerNormPlugin.cu  Makefile
src/plugins/MaskedSoftmaxPlugin/: CMakeLists.txt
src/plugins/PostEmbeddingPlugin/: CMakeLists.txt
src/python/: __init__.py  main.py  modify_ERNIE.py  npy2bin.py  onnx2bin.py  onnx2torch.py  onnx2trt.py  ppq_quantize.py  ppslim_quantize.py  qtonnx2bin.py
src/python/onnx_opt/: fuser.py  passes.py  plugins.yaml  utils.py
src/python/onnx_opt/passes/: __init__.py  base.py  custom.py
src/python/onnx_opt/plugins/: __init__.py  base.py  custom.py
src/python/utils/: loadLabelsandData.py
src/utils/: local_evaluate.py
sti2_data/: README.md
test/: test.sh
test/plugins/: testAddLayerNormPluginOnnx.py  testAddReluPluginOnnx.py  testLayerNormPluginOnnx.py  testMaskedSoftmaxPluginOnnx.py
tests/: testAllPlugins.sh
tests/plugins/: testAddLayerNormPluginOnnx.py  testAddReluPluginOnnx.py  testEmbLayerNormPluginOnnx.py  testLayerNormPluginOnnx.py  testMaskedSoftmaxPluginOnnx.py  testPostEmbeddingPluginOnnx.py  testPreEmbeddingPluginOnnx.py
tools/: command.py  modify_ERNIE.py  modify_onnx.py  onnx2trt.py  quantize.sh  transform_opset.py  utils.py
utils/: loadLabelsandData.py
